<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/HmirorOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/Hmiror" />

    <item
        android:id="@+id/VmirorOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/Vmiror" />

    <item
        android:id="@+id/rotationDroiteOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/rotationDroite" />
    <item
        android:id="@+id/rotationGaucheOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/rotationGauche" />

</menu>